--- a/analisis.ipynb
+++ b/analisis.ipynb
@@ -862,6 +862,130 @@
     "# Ejecutar la función\n",
     "detectar_duplicados_categoricos(df)\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a2068574",
+   "metadata": {},
+   "source": [
+    "**Técnicas más avanzadas para detectar duplicados \"semánticos\" que van más allá de la normalización básica:**\n",
+    "\n",
+    "Función \"integradora avanzada\" adaptada para recorrer todas las columnas categóricas del DataFrame y aplicar fuzzy matching, abreviación y clustering:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "ca9bb92f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "🔍 Análisis avanzado de 'documento'\n",
+      "  (458959 valores únicos)\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mKeyboardInterrupt\u001b[39m                         Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[25]\u001b[39m\u001b[32m, line 77\u001b[39m\n\u001b[32m     74\u001b[39m         \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33m-\u001b[39m\u001b[33m\"\u001b[39m * \u001b[32m60\u001b[39m)\n\u001b[32m     76\u001b[39m \u001b[38;5;66;03m# Ejemplo de uso:\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m77\u001b[39m \u001b[43mdiagnostico_avanzado_duplicados_allcols\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdf\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mfuzzy\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mabrev\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mcluster\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mfuzzy_umbral\u001b[49m\u001b[43m=\u001b[49m\u001b[32;43m85\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[25]\u001b[39m\u001b[32m, line 50\u001b[39m, in \u001b[36mdiagnostico_avanzado_duplicados_allcols\u001b[39m\u001b[34m(df, tecnicas, fuzzy_umbral)\u001b[39m\n\u001b[32m     48\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33m  (\u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mlen\u001b[39m(valores)\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m valores únicos)\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m     49\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[33m'\u001b[39m\u001b[33mfuzzy\u001b[39m\u001b[33m'\u001b[39m \u001b[38;5;129;01min\u001b[39;00m tecnicas:\n\u001b[32m---> \u001b[39m\u001b[32m50\u001b[39m     similares = \u001b[43mdetectar_similares_fuzzy\u001b[49m\u001b[43m(\u001b[49m\u001b[43mvalores\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mfuzzy_umbral\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     51\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m similares:\n\u001b[32m     52\u001b[39m         \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33m  📊 Similitud fuzzy (>=\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfuzzy_umbral\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m%): mostrando primeros 3\u001b[39m\u001b[33m\"\u001b[39m)\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[25]\u001b[39m\u001b[32m, line 11\u001b[39m, in \u001b[36mdetectar_similares_fuzzy\u001b[39m\u001b[34m(valores, umbral)\u001b[39m\n\u001b[32m      9\u001b[39m valores_unicos = \u001b[38;5;28mlist\u001b[39m(\u001b[38;5;28mset\u001b[39m(valores))\n\u001b[32m     10\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m val1, val2 \u001b[38;5;129;01min\u001b[39;00m itertools.combinations(valores_unicos, \u001b[32m2\u001b[39m):\n\u001b[32m---> \u001b[39m\u001b[32m11\u001b[39m     ratio = \u001b[43mfuzz\u001b[49m\u001b[43m.\u001b[49m\u001b[43mratio\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mstr\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mval1\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mstr\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mval2\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     12\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m ratio >= umbral:\n\u001b[32m     13\u001b[39m         similares.append((val1, val2, ratio))\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\PW1\\DatosMEC2025\\venv\\Lib\\site-packages\\fuzzywuzzy\\utils.py:38\u001b[39m, in \u001b[36mcheck_for_none.<locals>.decorator\u001b[39m\u001b[34m(*args, **kwargs)\u001b[39m\n\u001b[32m     36\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m args[\u001b[32m0\u001b[39m] \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mor\u001b[39;00m args[\u001b[32m1\u001b[39m] \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[32m     37\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[32m0\u001b[39m\n\u001b[32m---> \u001b[39m\u001b[32m38\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mfunc\u001b[49m\u001b[43m(\u001b[49m\u001b[43m*\u001b[49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43m*\u001b[49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\PW1\\DatosMEC2025\\venv\\Lib\\site-packages\\fuzzywuzzy\\utils.py:29\u001b[39m, in \u001b[36mcheck_for_equivalence.<locals>.decorator\u001b[39m\u001b[34m(*args, **kwargs)\u001b[39m\n\u001b[32m     27\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m args[\u001b[32m0\u001b[39m] == args[\u001b[32m1\u001b[39m]:\n\u001b[32m     28\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[32m100\u001b[39m\n\u001b[32m---> \u001b[39m\u001b[32m29\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mfunc\u001b[49m\u001b[43m(\u001b[49m\u001b[43m*\u001b[49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43m*\u001b[49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\PW1\\DatosMEC2025\\venv\\Lib\\site-packages\\fuzzywuzzy\\utils.py:47\u001b[39m, in \u001b[36mcheck_empty_string.<locals>.decorator\u001b[39m\u001b[34m(*args, **kwargs)\u001b[39m\n\u001b[32m     45\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(args[\u001b[32m0\u001b[39m]) == \u001b[32m0\u001b[39m \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(args[\u001b[32m1\u001b[39m]) == \u001b[32m0\u001b[39m:\n\u001b[32m     46\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[32m0\u001b[39m\n\u001b[32m---> \u001b[39m\u001b[32m47\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mfunc\u001b[49m\u001b[43m(\u001b[49m\u001b[43m*\u001b[49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43m*\u001b[49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\PW1\\DatosMEC2025\\venv\\Lib\\site-packages\\fuzzywuzzy\\fuzz.py:28\u001b[39m, in \u001b[36mratio\u001b[39m\u001b[34m(s1, s2)\u001b[39m\n\u001b[32m     25\u001b[39m s1, s2 = utils.make_type_consistent(s1, s2)\n\u001b[32m     27\u001b[39m m = SequenceMatcher(\u001b[38;5;28;01mNone\u001b[39;00m, s1, s2)\n\u001b[32m---> \u001b[39m\u001b[32m28\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mutils\u001b[49m\u001b[43m.\u001b[49m\u001b[43mintr\u001b[49m\u001b[43m(\u001b[49m\u001b[32;43m100\u001b[39;49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43m \u001b[49m\u001b[43mm\u001b[49m\u001b[43m.\u001b[49m\u001b[43mratio\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\PW1\\DatosMEC2025\\venv\\Lib\\site-packages\\fuzzywuzzy\\utils.py:103\u001b[39m, in \u001b[36mintr\u001b[39m\u001b[34m(n)\u001b[39m\n\u001b[32m     99\u001b[39m     string_out = StringProcessor.strip(string_out)\n\u001b[32m    100\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m string_out\n\u001b[32m--> \u001b[39m\u001b[32m103\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mintr\u001b[39m(n):\n\u001b[32m    104\u001b[39m \u001b[38;5;250m    \u001b[39m\u001b[33;03m'''Returns a correctly rounded integer'''\u001b[39;00m\n\u001b[32m    105\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mint\u001b[39m(\u001b[38;5;28mround\u001b[39m(n))\n",
+      "\u001b[31mKeyboardInterrupt\u001b[39m: "
+     ]
+    }
+   ],
+   "source": [
+    "from fuzzywuzzy import fuzz\n",
+    "import itertools\n",
+    "from collections import defaultdict\n",
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "from sklearn.cluster import DBSCAN\n",
+    "\n",
+    "def detectar_similares_fuzzy(valores, umbral=85):\n",
+    "    similares = []\n",
+    "    valores_unicos = list(set(valores))\n",
+    "    for val1, val2 in itertools.combinations(valores_unicos, 2):\n",
+    "        ratio = fuzz.ratio(str(val1), str(val2))\n",
+    "        if ratio >= umbral:\n",
+    "            similares.append((val1, val2, ratio))\n",
+    "    return similares\n",
+    "\n",
+    "def detectar_abreviaciones(valores):\n",
+    "    abreviaciones = []\n",
+    "    valores_unicos = list(set(valores))\n",
+    "    for val1, val2 in itertools.combinations(valores_unicos, 2):\n",
+    "        str1, str2 = str(val1).lower(), str(val2).lower()\n",
+    "        if str1 in str2 or str2 in str1:\n",
+    "            abreviaciones.append((val1, val2))\n",
+    "        iniciales1 = ''.join([word[0] for word in str1.split() if word])\n",
+    "        iniciales2 = ''.join([word[0] for word in str2.split() if word])\n",
+    "        if iniciales1 == str2 or iniciales2 == str1:\n",
+    "            abreviaciones.append((val1, val2))\n",
+    "    return abreviaciones\n",
+    "\n",
+    "def agrupar_similares_automatico(valores, eps=0.3):\n",
+    "    vectorizer = TfidfVectorizer(analyzer='char_wb', ngram_range=(2,3))\n",
+    "    tfidf_matrix = vectorizer.fit_transform([str(v) for v in valores])\n",
+    "    clustering = DBSCAN(eps=eps, min_samples=2, metric='cosine')\n",
+    "    cluster_labels = clustering.fit_predict(tfidf_matrix)\n",
+    "    grupos = defaultdict(list)\n",
+    "    for i, label in enumerate(cluster_labels):\n",
+    "        if label != -1:\n",
+    "            grupos[label].append(valores[i])\n",
+    "    return grupos\n",
+    "\n",
+    "def diagnostico_avanzado_duplicados_allcols(df, tecnicas=['fuzzy', 'abrev', 'cluster'], fuzzy_umbral=85):\n",
+    "    \"\"\"\n",
+    "    Aplica múltiples técnicas de detección de duplicados en todas las columnas categóricas\n",
+    "    \"\"\"\n",
+    "    columnas_categoricas = df.select_dtypes(include=['object']).columns\n",
+    "    for columna in columnas_categoricas:\n",
+    "        print(f\"\\n🔍 Análisis avanzado de '{columna}'\")\n",
+    "        valores = df[columna].dropna().unique()\n",
+    "        print(f\"  ({len(valores)} valores únicos)\")\n",
+    "        if 'fuzzy' in tecnicas:\n",
+    "            similares = detectar_similares_fuzzy(valores, fuzzy_umbral)\n",
+    "            if similares:\n",
+    "                print(f\"  📊 Similitud fuzzy (>={fuzzy_umbral}%): mostrando primeros 3\")\n",
+    "                for v1, v2, score in similares[:3]:\n",
+    "                    print(f\"     {score}%: '{v1}' ≈ '{v2}'\")\n",
+    "            else:\n",
+    "                print(\"     Ningún par supera el umbral definido.\")\n",
+    "        if 'abrev' in tecnicas:\n",
+    "            abrev = detectar_abreviaciones(valores)\n",
+    "            if abrev:\n",
+    "                print(\"  🔤 Posibles abreviaciones: mostrando primeros 3\")\n",
+    "                for v1, v2 in abrev[:3]:\n",
+    "                    print(f\"     '{v1}' ↔ '{v2}'\")\n",
+    "            else:\n",
+    "                print(\"     No se detectaron abreviaciones obvias.\")\n",
+    "        if 'cluster' in tecnicas:\n",
+    "            grupos = agrupar_similares_automatico(valores)\n",
+    "            if grupos:\n",
+    "                print(\"  🎯 Agrupamiento automático (primeros 3 grupos):\")\n",
+    "                for i, (cluster, items) in enumerate(grupos.items()):\n",
+    "                    if i < 3:\n",
+    "                        print(f\"     Grupo {cluster}: {items}\")\n",
+    "            else:\n",
+    "                print(\"     No se formaron grupos automáticos.\")\n",
+    "        print(\"-\" * 60)\n",
+    "\n",
+    "# Ejemplo de uso:\n",
+    "diagnostico_avanzado_duplicados_allcols(df, ['fuzzy', 'abrev', 'cluster'], fuzzy_umbral=85)\n"
+   ]
   }
  ],
  "metadata": {
