--- a/analisis.ipynb
+++ b/analisis.ipynb
@@ -875,7 +875,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "ca9bb92f",
    "metadata": {},
    "outputs": [
@@ -884,26 +884,38 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "🔍 Análisis avanzado de 'documento'\n",
-      "  (458959 valores únicos)\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mKeyboardInterrupt\u001b[39m                         Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[25]\u001b[39m\u001b[32m, line 77\u001b[39m\n\u001b[32m     74\u001b[39m         \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33m-\u001b[39m\u001b[33m\"\u001b[39m * \u001b[32m60\u001b[39m)\n\u001b[32m     76\u001b[39m \u001b[38;5;66;03m# Ejemplo de uso:\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m77\u001b[39m \u001b[43mdiagnostico_avanzado_duplicados_allcols\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdf\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mfuzzy\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mabrev\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mcluster\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mfuzzy_umbral\u001b[49m\u001b[43m=\u001b[49m\u001b[32;43m85\u001b[39;49m\u001b[43m)\u001b[49m\n",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[25]\u001b[39m\u001b[32m, line 50\u001b[39m, in \u001b[36mdiagnostico_avanzado_duplicados_allcols\u001b[39m\u001b[34m(df, tecnicas, fuzzy_umbral)\u001b[39m\n\u001b[32m     48\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33m  (\u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mlen\u001b[39m(valores)\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m valores únicos)\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m     49\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[33m'\u001b[39m\u001b[33mfuzzy\u001b[39m\u001b[33m'\u001b[39m \u001b[38;5;129;01min\u001b[39;00m tecnicas:\n\u001b[32m---> \u001b[39m\u001b[32m50\u001b[39m     similares = \u001b[43mdetectar_similares_fuzzy\u001b[49m\u001b[43m(\u001b[49m\u001b[43mvalores\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mfuzzy_umbral\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     51\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m similares:\n\u001b[32m     52\u001b[39m         \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33m  📊 Similitud fuzzy (>=\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfuzzy_umbral\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m%): mostrando primeros 3\u001b[39m\u001b[33m\"\u001b[39m)\n",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[25]\u001b[39m\u001b[32m, line 11\u001b[39m, in \u001b[36mdetectar_similares_fuzzy\u001b[39m\u001b[34m(valores, umbral)\u001b[39m\n\u001b[32m      9\u001b[39m valores_unicos = \u001b[38;5;28mlist\u001b[39m(\u001b[38;5;28mset\u001b[39m(valores))\n\u001b[32m     10\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m val1, val2 \u001b[38;5;129;01min\u001b[39;00m itertools.combinations(valores_unicos, \u001b[32m2\u001b[39m):\n\u001b[32m---> \u001b[39m\u001b[32m11\u001b[39m     ratio = \u001b[43mfuzz\u001b[49m\u001b[43m.\u001b[49m\u001b[43mratio\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mstr\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mval1\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mstr\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mval2\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     12\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m ratio >= umbral:\n\u001b[32m     13\u001b[39m         similares.append((val1, val2, ratio))\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mc:\\PW1\\DatosMEC2025\\venv\\Lib\\site-packages\\fuzzywuzzy\\utils.py:38\u001b[39m, in \u001b[36mcheck_for_none.<locals>.decorator\u001b[39m\u001b[34m(*args, **kwargs)\u001b[39m\n\u001b[32m     36\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m args[\u001b[32m0\u001b[39m] \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mor\u001b[39;00m args[\u001b[32m1\u001b[39m] \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[32m     37\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[32m0\u001b[39m\n\u001b[32m---> \u001b[39m\u001b[32m38\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mfunc\u001b[49m\u001b[43m(\u001b[49m\u001b[43m*\u001b[49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43m*\u001b[49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mc:\\PW1\\DatosMEC2025\\venv\\Lib\\site-packages\\fuzzywuzzy\\utils.py:29\u001b[39m, in \u001b[36mcheck_for_equivalence.<locals>.decorator\u001b[39m\u001b[34m(*args, **kwargs)\u001b[39m\n\u001b[32m     27\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m args[\u001b[32m0\u001b[39m] == args[\u001b[32m1\u001b[39m]:\n\u001b[32m     28\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[32m100\u001b[39m\n\u001b[32m---> \u001b[39m\u001b[32m29\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mfunc\u001b[49m\u001b[43m(\u001b[49m\u001b[43m*\u001b[49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43m*\u001b[49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mc:\\PW1\\DatosMEC2025\\venv\\Lib\\site-packages\\fuzzywuzzy\\utils.py:47\u001b[39m, in \u001b[36mcheck_empty_string.<locals>.decorator\u001b[39m\u001b[34m(*args, **kwargs)\u001b[39m\n\u001b[32m     45\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(args[\u001b[32m0\u001b[39m]) == \u001b[32m0\u001b[39m \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(args[\u001b[32m1\u001b[39m]) == \u001b[32m0\u001b[39m:\n\u001b[32m     46\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[32m0\u001b[39m\n\u001b[32m---> \u001b[39m\u001b[32m47\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mfunc\u001b[49m\u001b[43m(\u001b[49m\u001b[43m*\u001b[49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43m*\u001b[49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mc:\\PW1\\DatosMEC2025\\venv\\Lib\\site-packages\\fuzzywuzzy\\fuzz.py:28\u001b[39m, in \u001b[36mratio\u001b[39m\u001b[34m(s1, s2)\u001b[39m\n\u001b[32m     25\u001b[39m s1, s2 = utils.make_type_consistent(s1, s2)\n\u001b[32m     27\u001b[39m m = SequenceMatcher(\u001b[38;5;28;01mNone\u001b[39;00m, s1, s2)\n\u001b[32m---> \u001b[39m\u001b[32m28\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mutils\u001b[49m\u001b[43m.\u001b[49m\u001b[43mintr\u001b[49m\u001b[43m(\u001b[49m\u001b[32;43m100\u001b[39;49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43m \u001b[49m\u001b[43mm\u001b[49m\u001b[43m.\u001b[49m\u001b[43mratio\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mc:\\PW1\\DatosMEC2025\\venv\\Lib\\site-packages\\fuzzywuzzy\\utils.py:103\u001b[39m, in \u001b[36mintr\u001b[39m\u001b[34m(n)\u001b[39m\n\u001b[32m     99\u001b[39m     string_out = StringProcessor.strip(string_out)\n\u001b[32m    100\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m string_out\n\u001b[32m--> \u001b[39m\u001b[32m103\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mintr\u001b[39m(n):\n\u001b[32m    104\u001b[39m \u001b[38;5;250m    \u001b[39m\u001b[33;03m'''Returns a correctly rounded integer'''\u001b[39;00m\n\u001b[32m    105\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mint\u001b[39m(\u001b[38;5;28mround\u001b[39m(n))\n",
-      "\u001b[31mKeyboardInterrupt\u001b[39m: "
+      "🔍 Analizando 'documento' (458959 únicos)\n",
+      "------------------------------------------------------------\n",
+      "\n",
+      "🔍 Analizando 'nombre_completo' (458268 únicos)\n",
+      "⏭️  Análisis saltado en 'nombre_completo' por exceso de valores únicos.\n",
+      "\n",
+      "🔍 Analizando 'carrera' (2032 únicos)\n",
+      "------------------------------------------------------------\n",
+      "\n",
+      "🔍 Analizando 'titulo' (963 únicos)\n",
+      "------------------------------------------------------------\n",
+      "\n",
+      "🔍 Analizando 'numero_resolucion' (106929 únicos)\n",
+      "⏭️  Análisis saltado en 'numero_resolucion' por exceso de valores únicos.\n",
+      "\n",
+      "🔍 Analizando 'fecha_resolucion' (5921 únicos)\n",
+      "⏭️  Análisis saltado en 'fecha_resolucion' por exceso de valores únicos.\n",
+      "\n",
+      "🔍 Analizando 'tipo_institucion' (12 únicos)\n",
+      "------------------------------------------------------------\n",
+      "\n",
+      "🔍 Analizando 'institucion' (513 únicos)\n",
+      "------------------------------------------------------------\n",
+      "\n",
+      "🔍 Analizando 'gobierno_actual' (2 únicos)\n",
+      "------------------------------------------------------------\n",
+      "\n",
+      "🔍 Analizando 'sexo' (2 únicos)\n",
+      "------------------------------------------------------------\n",
+      "\n",
+      "🔍 Analizando 'tipo_institucion_normalizado' (7 únicos)\n",
+      "------------------------------------------------------------\n"
      ]
     }
    ],
@@ -985,6 +997,83 @@
     "\n",
     "# Ejemplo de uso:\n",
     "diagnostico_avanzado_duplicados_allcols(df, ['fuzzy', 'abrev', 'cluster'], fuzzy_umbral=85)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "b5562a4d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "🔍 Analizando 'documento' (458959 únicos)\n",
+      "⏭️  Análisis saltado en 'documento' por exceso de valores únicos.\n",
+      "\n",
+      "🔍 Analizando 'nombre_completo' (458268 únicos)\n",
+      "⏭️  Análisis saltado en 'nombre_completo' por exceso de valores únicos.\n",
+      "\n",
+      "🔍 Analizando 'carrera' (2032 únicos)\n",
+      "------------------------------------------------------------\n",
+      "\n",
+      "🔍 Analizando 'titulo' (963 únicos)\n",
+      "------------------------------------------------------------\n",
+      "\n",
+      "🔍 Analizando 'numero_resolucion' (106929 únicos)\n",
+      "⏭️  Análisis saltado en 'numero_resolucion' por exceso de valores únicos.\n",
+      "\n",
+      "🔍 Analizando 'fecha_resolucion' (5921 únicos)\n",
+      "⏭️  Análisis saltado en 'fecha_resolucion' por exceso de valores únicos.\n",
+      "\n",
+      "🔍 Analizando 'tipo_institucion' (12 únicos)\n",
+      "------------------------------------------------------------\n",
+      "\n",
+      "🔍 Analizando 'institucion' (513 únicos)\n",
+      "------------------------------------------------------------\n",
+      "\n",
+      "🔍 Analizando 'gobierno_actual' (2 únicos)\n",
+      "------------------------------------------------------------\n",
+      "\n",
+      "🔍 Analizando 'sexo' (2 únicos)\n",
+      "------------------------------------------------------------\n",
+      "\n",
+      "🔍 Analizando 'tipo_institucion_normalizado' (7 únicos)\n",
+      "------------------------------------------------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "def diagnostico_avanzado_duplicados_allcols(\n",
+    "        df, tecnicas=['fuzzy', 'abrev', 'cluster'], fuzzy_umbral=85, max_unicos=200):\n",
+    "    \"\"\"\n",
+    "    Aplica técnicas de detección de duplicados en todas columnas categóricas, \n",
+    "    avisando si alguna tiene demasiados valores únicos.\n",
+    "    \"\"\"\n",
+    "    columnas_categoricas = df.select_dtypes(include=['object']).columns\n",
+    "    for columna in columnas_categoricas:\n",
+    "        valores = df[columna].dropna().unique()\n",
+    "        n_unicos = len(valores)\n",
+    "        print(f\"\\n🔍 Analizando '{columna}' ({n_unicos} únicos)\")\n",
+    "        \n",
+    "        # Aviso y confirmación para columnas grandes\n",
+    "        if n_unicos > max_unicos:\n",
+    "            respuesta = input(\n",
+    "                f\"La columna '{columna}' tiene {n_unicos} valores únicos. \"\n",
+    "                \"¿Quieres proceder con el análisis? (sí/no): \")\n",
+    "            if respuesta.lower() not in ['si', 'sí', 's', 'y', 'yes']:\n",
+    "                print(f\"⏭️  Análisis saltado en '{columna}' por exceso de valores únicos.\")\n",
+    "                continue\n",
+    "        \n",
+    "        # ... (resto de la función como antes: fuzzy, abrev, cluster)\n",
+    "        # Usa aquí tus funciones de diagnóstico por columna\n",
+    "        \n",
+    "        print(\"-\" * 60)\n",
+    "\n",
+    "# Ejemplo de uso\n",
+    "diagnostico_avanzado_duplicados_allcols(df, ['fuzzy', 'abrev', 'cluster'], fuzzy_umbral=85, max_unicos=200)\n"
    ]
   }
  ],
